# titleforge-desktop

./: .gitattributes  .gitignore  CONTEXT.md  CURATED_TITLES_EXPANSION_PLAN.md  EGCG_Audit_Report.md  EXECUTION_INSTRUCTIONS.md  LOCAL_LLM_ENGINE_PLAN.md  README.md  curated-titles-output.json  package-lock.json  package.json  seed-data.json
.github/workflows/: build.yml
scripts/: download-model.sh  generate-curated-titles.js  generate-curated-titles.py  merge-new-titles.py  resume-curated-titles.py
site/: index.html  styles.css
src/: app.js  dashboard.html  dashboard.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  engine.rs  lib.rs  local_llm.rs  main.rs  markov.rs  title_gen.rs
