[package]
name = "titleforge-desktop"
version = "0.8.0"
description = "Offline title generator for Windows, Mac, and Linux"
authors = ["Olammyinc"]
edition = "2021"

[lib]
name = "titleforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = "0.4"
hostname = "0.4"

# Local LLM inference via candle-rs
candle-core = "0.11"
candle-transformers = "0.11"
candle-nn = "0.11"
tokenizers = "0.21"
hf-hub = "0.4"

[features]
default = []
cuda = ["candle-core/cuda", "candle-transformers/cuda"]
